# lug

./: .envrc  .gitignore  Cargo.toml  Makefile
example/: .manifest
src/: lib.rs  main.rs
src/commands/: init.rs  install.rs  mod.rs
src/installer/: mod.rs
src/manifest/: mod.rs  template.rs
src/package/: download.rs  mod.rs
